# libtomato

./: CMakeLists.txt  README.md  connection.cpp  gameclient.cpp  message.cpp  sigdef.py
include/tomato/: connection.h  gameclient.h  message.h  socket.h
